# bitstamp-btcusd-minute-data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-automation.yml
scripts/: update_data.py
