[project]
name = "bitstamp-btcusd-minute-data"
version = "0.1.0"
description = "Daily updates of Bitstamp BTC/USD 1-minute OHLC data, with historical data since 2012"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=18.0",
    "requests>=2.32.3",
]

[project.scripts]
btcdata-sync = "scripts.update_data:main"
btcdata-inspect = "scripts.inspect_data:main"

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
